# DojoZero

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  LICENSE  README.md  output_test.txt  pyproject.toml  test_claude_invoke.py
.github/workflows/: checks.yml  docker.yml  publish-client.yml  publish.yml
agents/: basic.yaml  shark.yaml  sheep.yaml  whale.yaml
agents/llms/: all.yaml  claude.yaml  deepseek.yaml  default.yaml  gemini.yaml  glm.yaml  grok.yaml  kimi.yaml  minimax.yaml  openai.yaml  qwen.yaml  two.yaml
agents/personas/: basic.yaml  degen.yaml  mystic.yaml  oracle.yaml  professor.yaml  pundit.yaml  shark.yaml  sheep.yaml  whale.yaml
backend/: README.md  requirements.txt  server.py
configs/: arena-server.example.yaml  nba-moneyline.yaml  nba-pregame-betting.yaml  nfl-game.yaml  nfl-moneyline.yaml  nfl-pregame-betting.yaml
configs/agents/: basic.yaml  shark.yaml  sheep.yaml  whale.yaml
demos/: espn_api_demo.py  nba_api_demo.py  nfl_api_demo.py  polymarket_api_demo.py  polymarket_multi_market_demo.py  power_ranking_extraction_demo.py  pregame_stats_demo.py  tavily_demo.py  twitter_api_demo.py  websearch_demo.py
demos/data/: power_ranking_search_event.json
deploy/: .env.template  DEPLOYMENT.md  Dockerfile  docker-compose.local.yml  docker-compose.yml  local.Dockerfile  run_daily.sh  run_daily_trials.py  setup-ecs.sh  setup.sh  up.sh
deploy_alibabacloud/: docker-compose.yml
design/: 2025-11-21-agent-x-poc.md  2025-11-21-dojo-zero-poc.md  2025-12-03-data-infra.md  2025-12-08-nba_moneyline_broker.md  2025-12-10-data-infra.md  2026-01-07-api-for-frontend.md  2026-01-09-trace-data-design.md  2026-01-11-api-design.md  2026-01-11-api-refactor.md  2026-01-22-frontend-design.md  2026-01-28-data-model-overhaul.md  2026-02-05-background-cache-refresh.md  2026-02-17-external-agent-api.md  2026-02-17-trial-containerization-api-agents.md  2026-02-23-openclaw-integration.md  2026-03-06-social-media-data.md  2026-04-17-llm-context-in-otel.md  README.md  data-infrastructure.md  data-source-architecture.md  sport-betting-broker-12-08.md  sport-betting-broker.md  wip-agent-x-poc.md
docker/: README.md  allinone.Dockerfile  docker-compose.allinone.local.yml  docker-compose.local.yml  local.Dockerfile
docs/: README.md  architecture.md  arena.md  backtesting.md  betting-agent-context-management.html  betting-agent-context-management.md  cli.md  client-skill.md  client.md  configuration.md  dashboard_server.md  deployment.md  installation.md  llm_api_usage.md  nba-game-collector.md  nba-trial-runner.md  nfl-game-collector.md  nfl-trial-runner.md  running-trials.md  single_trial.md  tracing.md  trial-runners.md  trial_runner.md
frontend/: .env.template  .gitignore  index.html  package.json  vite.config.js
frontend-update/: index.html  package.json  vite.config.js
skill/: SKILL.md
src/agentx/: cli.py  (+1 more)
tests/: __init__.py  conftest.py  test_agent.py  test_agent_configs.py  test_agent_event_throttle.py  test_agent_ray.py  test_api_e2e.py  test_arena_agent_actions_sorting.py  test_arena_event_deserialization.py  test_arena_span_grouping.py  test_betting_formatters.py  test_bounded_random.py  test_bounded_random_buffered.py  test_broker.ipynb  test_broker.py  test_cli.py  test_cli_agents.py  test_dashboard.py  test_data_hub.py  test_data_nba.py  test_data_nfl.py  test_data_polymarket.py  test_game_state_tracker.py  test_gateway.py  test_group.py  test_nba_moneyline_agent.py  test_nba_moneyline_agent_ray.py  test_nba_moneyline_group.py  test_nfl_formatters.py  test_nfl_moneyline_agent.py  test_oss.py  test_registry.py  test_sample_environment.py  test_scheduler.py  test_sls_sql_query.py  test_social_board.py  test_socialmedia_events.py  test_span_models.py  test_stats_insight_events.py  test_subscriptions.py  (+1 more)
tool/: nba_api_demo.py
tools/: check_trials.py  cook-nfl-jsonl.py  cook_nfl_jsonl.py  deduplicate_jsonl.py  delete_sls_logs.py  list_sls_traces.py  nba-game-collector.md  nba_game_collector.py  nba_trial_runner.py  ncaa_trial_runner.py  nfl_game_collector.py  nfl_trial_runner.py  plot_game.py  test_alicloud_access.py  validate_alicloud_access.py
trial_params/: nba-moneyline.yaml  ncaa-moneyline.yaml  nfl-moneyline.yaml
trial_sources/: nba.yaml  ncaa.yaml  nfl.yaml
(+313 files in other folders)
