[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentx"
version = "0.0.0"
description = "AgentX is a system for hosting AI agents that run continously on realtime data to reason about future outcomes and act on them, such as trading and placing bets."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AgentX Team"}
]
dependencies = [
    "PyYAML>=6.0",
    "pydantic>=2.12.4",
    "aiohttp>=3.9.0",
]

[project.scripts]
agentx = "agentx.cli:main"

[project.optional-dependencies]
ray = [
    "ray>=2.51.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
    "ray>=2.51.1",
    "nba_api",
    "python-dotenv",
    "tavily-python",
    "dashscope"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
