[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dojozero"
version = "0.0.0"
description = "DojoZero is a system for hosting AI agents that run continously on realtime data to reason about future outcomes and act on them, such as trading and placing bets."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DojoZero Team"}
]
dependencies = [
    "PyYAML>=6.0",
    "pydantic>=2.12.4",
    "aiohttp>=3.9.0",
    "agentscope[gemini]>=1.0.14",
    "py-clob-client>=0.1.0",
    "oss2>=2.18.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "alibabacloud-credentials>=1.0.0",
    "aliyun-log-python-sdk",
    "matplotlib>=3.10.8",
]

[project.scripts]
dojo0 = "dojozero.cli:main"

[project.optional-dependencies]
ray = [
    "ray>=2.51.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pre-commit>=3.0.0",
    "ray>=2.51.1",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.12",
    "agentscope>=1.0.8",
    "python-dateutil>=2.8.0",
    "websockets>=15.0.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
