[project]
name = "dojozero-workspace"
version = "0.0.0"
description = "DojoZero monorepo workspace"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
dojozero = { workspace = true }
dojozero-client = { workspace = true }

[dependency-groups]
dev = [
    "dojozero",
    "dojozero-client",
    "oss2>=2.18.0",
    "alibabacloud-credentials>=1.0.0",
    "aliyun-log-python-sdk",
    "redis>=7.2.1",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
    "pyright>=1.1.0",
    "pre-commit>=3.0.0",
    "ray>=2.51.1",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.12",
    "agentscope>=1.0.8",
    "python-dateutil>=2.8.0",
    "websockets>=15.0.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = [
    "samples/external_agent",
    "**/.venv",
    "**/node_modules",
]
extraPaths = ["packages/dojozero/src", "packages/dojozero-client/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--import-mode=importlib"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
